--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
+    "react-inlinesvg": "^4.1.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
